<resources>
    <string name="app_name">Menu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nothing">Nothing</string>
    <string name="menu">Menu</string>
    <string name="profile">Profile</string>
    <string name="basket">Basket</string>
    <string name="qr">QR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="burgers">Burgers</string>
    <string name="drinks">Drinks</string>
    <string name="ice_cream">Ice cream</string>
    <string name="pizza">Pizza</string>
    <string name="price">Price</string>
</resources>